Fixed DifferTest and improved file handling